# Ressy-Bot-Py

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Ressy-Debug.py  acts_module.py  app.py  checkin.py  cookies.txt  counter.json  docker-compose.yml  groq_module.py  main.js  main.py  music.py  music_commands.py  package-lock.json  package.json  prompt.txt  pyproject.toml  requirement.txt  requirements.txt  responses.py  run.sh  slash_commands.py  xd_counter.txt
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
modules/: acts.js  commands.js  groq.js  responses.js
modulos/: acts.py  general_responses.py  ressy_ai.py  slash_commands.py
openspec/: config.yaml
scripts/: debug_ranking.py  probe_aa.py  probe_bfcl.py  test_aa_realdb.py  test_bfcl_live.py  test_bfcl_realdb.py  test_scrape.py
src/: __main__.py
tests/: conftest.py  test_activity_kinds.py  test_ai_chat.py  test_ai_chat_config.py  test_ai_chat_web.py  test_ai_chat_web_search.py  test_ai_chat_web_search_live.py  test_api_endpoints.py  test_blackboard_plugin.py  test_bot_commands.py  test_code_runner.py  test_config_manager.py  test_integration.py  test_music_config_roundtrip.py  test_music_player.py  test_openrouter_prices_api.py  test_openrouter_prices_api_coverage.py  test_openrouter_prices_client.py  test_openrouter_prices_cog.py  test_openrouter_prices_database.py  test_openrouter_prices_integration.py  test_openrouter_prices_models.py  test_openrouter_ranking_aa_key_freshness.py  test_openrouter_ranking_aliases.py  (+20 more)
(+480 files in other folders)
