[project]
name = "ressy-korosoft"
version = "0.1.0"
description = "Discord bot + React dashboard for live configuration"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiosqlite>=0.20",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "Pillow>=10.4",
    "yt-dlp>=2024.12.1",
    "playwright>=1.40",
    "python-dateutil>=2.8",
]

[project.scripts]
ressy-bot = "src.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pytest-cov>=5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: marks tests as live (requieren infraestructura real)",
]
addopts = "-m 'not live'"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/__main__.py",          # Entry point — requiere token Discord real
    "src/bot/core/bot.py",      # Bot — requiere conexión Discord
    "src/bot/loader.py",        # Loader — requiere bot con cogs
]

[tool.coverage.report]
show_missing = true
skip_covered = false
